--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -6,8 +6,7 @@ mat-icon {
     color: #466be0;
     text-transform: uppercase;
     font-weight: 900;
-    margin-left: 40px;
-    margin-bottom: 20px;
+    margin: 20px 0px 20px 40px;
 }
 
 .menu-item {
