--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<app-header></app-header> <router-outlet></router-outlet>
+<mat-sidenav-container>
+  <mat-sidenav #sidebar mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <div class="content">
+      <div class="toolbar">
+        <app-header (toggleEvent)="sidebar.toggle()"></app-header>
+      </div>
+      <div class="main"><router-outlet></router-outlet></div>
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
