--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,9 @@
-<mat-sidenav-container class="">
-  <mat-sidenav #sidebar mode="side" opened>
-    <app-sidebar></app-sidebar>
-  </mat-sidenav>
-  <mat-sidenav-content>
-    <div class="content">
-      <div class="toolbar">
-        <mat-toolbar>
-          <mat-icon (click)="sidebar.toggle()">menu</mat-icon>
-          <div class="box">
-            <mat-icon>search</mat-icon>
-            <mat-icon>bookmark_border</mat-icon>
-            <mat-icon>mail_outline</mat-icon>
-          </div>
-        </mat-toolbar>
-      </div>
-      <div class="main">main content</div>
-    </div>
-  </mat-sidenav-content>
-</mat-sidenav-container>
+<mat-toolbar>
+  <mat-icon (click)="toggleSidebar()">menu</mat-icon>
+  <span>Fuelprice</span>
+  <div class="icons">
+    <mat-icon>search</mat-icon>
+    <mat-icon>bookmark_border</mat-icon>
+    <mat-icon>mail_outline</mat-icon>
+  </div>
+</mat-toolbar>
