--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,7 +1,4 @@
 <div class="navbar">
-  <div class="top">
-    <mat-icon>notifications_none</mat-icon>
-  </div>
   <div class="menu">
     <div class="menu-head">
       <span>Dashboard</span>
@@ -13,7 +10,7 @@
         routerLink="/home"
         routerLinkActive="active"
       >
-        <mat-icon>dashboard</mat-icon>
+        <mat-icon>map</mat-icon>
         <span>Home</span>
       </button>
       <button
@@ -22,7 +19,7 @@
         routerLink="/home"
         routerLinkActive="active"
       >
-        <mat-icon>dashboard</mat-icon>
+        <mat-icon> local_gas_station</mat-icon>
         <span>Station</span>
       </button>
       <button
@@ -31,7 +28,7 @@
         routerLink="/home"
         routerLinkActive="active"
       >
-        <mat-icon>dashboard</mat-icon>
+        <mat-icon>group</mat-icon>
         <span>About us</span>
       </button>
       <button
@@ -40,7 +37,7 @@
         routerLink="/test"
         routerLinkActive="active"
       >
-        <mat-icon>dashboard</mat-icon>
+        <mat-icon>contacts</mat-icon>
         <span>Contact</span>
       </button>
     </div>
