--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,20 @@
+mat-sidenav-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
 mat-sidenav {
     background-color: #0f172a;
     width: 230px;
-    height: 100%;
+    // height: 100%;
 }
 
 mat-sidenav-content {
-    height: 100vh;
-    background-color: white;
-    .main {
-        margin-left: 30px;
-    }
+    flex: 1;
+    // background-color: brown;
+    // .main {
+    //     margin-left: 30px;
+    // }
 }
