Implement google place search

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,10 @@
 <mat-toolbar>
   <mat-icon (click)="toggleSidebar()">menu</mat-icon>
-  <span>Fuelprice</span>
-  <div class="icons">
+  <app-search-place></app-search-place>
+  <!-- <span>Fuelprice</span> -->
+  <!-- <div class="icons">
     <mat-icon>search</mat-icon>
     <mat-icon>bookmark_border</mat-icon>
     <mat-icon>mail_outline</mat-icon>
-  </div>
+  </div> -->
 </mat-toolbar>
