--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,8 +3,8 @@ mat-toolbar {
         margin-left: 15px;
         color: #6D8299;
     }
-    justify-content: space-between;
-    .icons {
-        margin-top: 15px;
-    }
+    // justify-content: space-between;
+    // .icons {
+    //     margin-top: 15px;
+    // }
 }
