--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <mat-sidenav-container>
-  <mat-sidenav #sidebar mode="side" opened>
+  <mat-sidenav #sidebar mode="side">
+    <!-- <mat-sidenav #sidebar mode="side" opened> -->
     <app-sidebar></app-sidebar>
   </mat-sidenav>
   <mat-sidenav-content>
