--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -16,7 +16,7 @@
       <button
         mat-button
         class="menu-button"
-        routerLink="/home"
+        routerLink="/station"
         routerLinkActive="active"
       >
         <mat-icon> local_gas_station</mat-icon>
