Code refactor and stations list

--- a/src/app/home/components/map/map.component.html
+++ b/src/app/home/components/map/map.component.html
@@ -3,7 +3,7 @@
     class="map"
     #googleMap
     height="500px"
-    width="100%"
+    width="500px"
     [zoom]="zoom"
     [center]="coords"
     [options]="options"
