refactor table structure

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <app-station-list
     *ngIf="isStations"
-    [dataSource]="stations"
+    [stationData]="stations"
+    [columnData]="columns"
   ></app-station-list>
   <app-map></app-map>
 </div>
