--- a/src/app/home/components/station-list/station-list.component.html
+++ b/src/app/home/components/station-list/station-list.component.html
@@ -41,6 +41,6 @@
     <td mat-cell *matCellDef="let element">{{ element.diesel }}</td>
   </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="columnData"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnData"></tr>
 </table>
