Fix station-list comp display

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <app-station-list
-    *ngIf="isStations"
-    [stationData]="stations"
+    *ngIf="dataSource"
+    [dataSource]="dataSource"
     [columnData]="columns"
   ></app-station-list>
   <app-map></app-map>
