refactor and quick fix

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,6 +1,9 @@
 <mat-toolbar>
   <mat-icon (click)="toggleSidebar()">menu</mat-icon>
-  <app-search-place></app-search-place>
+  <div class="search-input">
+    <app-search-place *ngIf="isHomeScreen()"></app-search-place>
+  </div>
+
   <!-- <span>Fuelprice</span> -->
   <!-- <div class="icons">
     <mat-icon>search</mat-icon>
