--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,10 +1,13 @@
 mat-toolbar {
     mat-icon {
-        margin-left: 15px;
+        margin: 0px 15px;
         color: #6D8299;
     }
-    // justify-content: space-between;
-    // .icons {
-    //     margin-top: 15px;
-    // }
+
+    .search-input {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+    }
 }
