--- a/src/app/core/components/search-place/search-place.component.html
+++ b/src/app/core/components/search-place/search-place.component.html
@@ -5,7 +5,7 @@
     [formGroup]="searchForm"
   >
     <mat-icon matPrefix>search</mat-icon>
-
+    <!-- <mat-label>Search Location</mat-label> -->
     <input
       matInput
       type="text"
