--- a/src/app/core/components/search-place/search-place.component.scss
+++ b/src/app/core/components/search-place/search-place.component.scss
@@ -1,6 +1,5 @@
 .container {
     font-size: 20px;
-    margin-top: 20px;
 }
 
 .search-form {
@@ -26,4 +25,8 @@
 
 :host ::ng-deep .mat-form-field:not(.mat-form-field-appearance-legacy) .mat-form-field-suffix .mat-icon-button .mat-icon {
     font-size: 100%;
+}
+
+:host ::ng-deep  .mat-form-field-wrapper {
+    padding-bottom: 0em;
 }
