--- a/src/app/home/components/map/map.component.html
+++ b/src/app/home/components/map/map.component.html
@@ -3,7 +3,7 @@
     class="map"
     #googleMap
     height="500px"
-    width="500px"
+    width="100%"
     [zoom]="zoom"
     [center]="coords"
     [options]="options"
@@ -11,7 +11,7 @@
     <div id="map"></div>
     <map-marker
       #markerElem="mapMarker"
-      *ngFor="let marker of markers"
+      *ngFor="let marker of markers | async"
       [position]="marker.position"
       [label]="marker.label"
       [title]="marker.title"
