add station form autopopulate

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -2,6 +2,7 @@ mat-toolbar {
     mat-icon {
         margin: 0px 15px;
         color: #6D8299;
+        cursor: pointer;
     }
 
     .search-input {
