--- a/src/app/station/station.component.html
+++ b/src/app/station/station.component.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="form-section">
-    <form (ngSubmit)="onSubmit()" [formGroup]="stationForm">
+    <form (ngSubmit)="onSubmit()" [formGroup]="stationForm" #form="ngForm">
       <div class="station-form-field">
         <mat-form-field appearance="outline" floatLabel="always">
           <mat-label>Station Name</mat-label>
@@ -65,9 +65,9 @@
           mat-raised-button
           type="button"
           color="warn"
-          (click)="onCancel()"
+          (click)="stationForm.valid ? onClear() : onCancel()"
         >
-          Cancel
+          {{ stationForm.valid ? "Clear" : "Cancel" }}
         </button>
       </div>
     </form>
