--- a/src/app/home/components/station-list/station-list.component.html
+++ b/src/app/home/components/station-list/station-list.component.html
@@ -41,6 +41,15 @@
     <td mat-cell *matCellDef="let element">{{ element.diesel }}</td>
   </ng-container>
 
+  <ng-container matColumnDef="star">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon class="update-price-btn" (click)="updatePrices(element)"
+        >more_vert</mat-icon
+      >
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="columnData"></tr>
   <tr mat-row *matRowDef="let row; columns: columnData"></tr>
 </table>
