--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div [ngClass]="dataSource ? 'container' : 'container_map'">
   <app-station-list
     *ngIf="dataSource"
+    [location]="location"
     [dataSource]="dataSource"
     [columnData]="columns"
   ></app-station-list>
-  <app-map></app-map>
+  <app-map [map]="map" [coords]="coords" [markers]="markers"></app-map>
 </div>
