refactor and add styling

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,7 +1,9 @@
+@import 'variables';
+
 mat-toolbar {
     mat-icon {
         margin: 0px 15px;
-        color: #6D8299;
+        color: $aqua;
         cursor: pointer;
     }
 
