--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div [ngClass]="dataSource ? 'container' : 'container_map'">
+<div [ngClass]="dataSource ? 'container' : 'container-map'">
   <app-station-list
     *ngIf="dataSource"
     [dataSource]="dataSource"
