--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,7 @@
-<p>page-not-found works!</p>
+<div class="container">
+  <div class="msg">
+    <p id="main">404</p>
+    <p id="content">Ooops...</p>
+    <p id="footer">page not found</p>
+  </div>
+</div>
