--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 mat-sidenav-container {
     display: flex;
     flex-direction: column;
@@ -6,15 +8,11 @@ mat-sidenav-container {
 }
 
 mat-sidenav {
-    background-color: #0f172a;
+    background-color: $navy;
     width: 230px;
     // height: 100%;
 }
 
 mat-sidenav-content {
     flex: 1;
-    // background-color: brown;
-    // .main {
-    //     margin-left: 30px;
-    // }
 }
