--- a/src/app/core/components/search-place/search-place.component.scss
+++ b/src/app/core/components/search-place/search-place.component.scss
@@ -1,5 +1,7 @@
+@import 'variables';
+
 .container {
-    font-size: 20px;
+    font-size: $pixel_20;
 }
 
 .search-form {
@@ -9,10 +11,10 @@
 
 .search-input {
     align-self: center;
-    margin-left: 10px;
-    font-size: 20px;
+    margin-left: $pixel_10;
+    font-size: $pixel_20;
     font-weight: 400;
-    color: #212529;
+    color: $black;
   }
 
 :host ::ng-deep .mat-form-field-appearance-outline .mat-form-field-infix {
@@ -20,11 +22,11 @@
    }
 
 :host ::ng-deep .mat-form-field-prefix .mat-icon {
-    font-size: 125%;
+    font-size: $percent_125;
 }
 
 :host ::ng-deep .mat-form-field:not(.mat-form-field-appearance-legacy) .mat-form-field-suffix .mat-icon-button .mat-icon {
-    font-size: 100%;
+    font-size: $percent_100;
 }
 
 :host ::ng-deep  .mat-form-field-wrapper {
