Updated Unit Tests

--- a/src/app/core/components/sidebar/sidebar.component.html
+++ b/src/app/core/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
   <div class="menu">
     <div class="menu-head">
-      <span>Dashboard</span>
+      <span id="title">Dashboard</span>
     </div>
     <div class="menu-item">
       <button
